# dotnet-linux-skeleton

./: Makefile  README.md  configure.in
src/: .Makefile.am.swp  AssemblyInfo.cs.in  Makefile.am  main.cs
